--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -82,7 +82,7 @@
       <div class="flex place-content-end">
         <p class="text-sm">
           {% trans "Or try a demo with a " %}
-          <a class="btn btn-xs" href="{% url 'core:get_a_demo' %}">{% trans "fake user 🥸" %}</a>
+          <a class="btn btn-xs" href="{% url 'core:get_a_demo' %}">{% trans "fake user" %} <span class="text-base">🥸</span></a>
 
         </p>
       </div>
