edited fake button style

--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -82,7 +82,7 @@
       <div class="flex place-content-end">
         <p class="text-sm">
           {% trans "Or try a demo with a " %}
-          <a class="btn btn-xs" href="{% url 'core:get_a_demo' %}">{% trans "fake user" %} <span class="text-base">🥸</span></a>
+          <a class="bg-base-100 pr-3 pl-2 py-2 rounded-xl hover:bg-base-300 font-semibold border border-transparent hover:border-base-content" href="{% url 'core:get_a_demo' %}">{% trans "fake user" %} <span class="text-xl">🥸</span></a>
 
         </p>
       </div>
