demo form: fixed empty submission

--- a/core/templates/core/demo.html
+++ b/core/templates/core/demo.html
@@ -13,14 +13,14 @@
     <div id="targetElement" class="mt-6"></div>
     <form id="demoForm" method="post" action="{% url 'core:get_a_demo' %}">
       {% csrf_token %}
-      <select name="user_email" class="select select-bordered w-full max-w-xs">
+      <select name="user_email" id="user_email" class="select select-bordered w-full max-w-xs text-base" onchange="toggleSubmitButton()">
         <option disabled selected>{% trans "Choose a fake user to connect with" %}</option>
-        <option value="m.scott@dundermifflin.com">Michael Scott</option>
-        <option value="p.beesly@dundermifflin.com">Pam Beesly</option>
-        <option value="j.halpert@dundermifflin.com">Jim Halpert</option>
-        <option value="k.malone@dundermifflin.com">Kevin Malone</option>
+        <option value="m.scott@dundermifflin.com">🕶️ Michael Scott </option>
+        <option value="p.beesly@dundermifflin.com">🎨 Pam Beesly </option>
+        <option value="j.halpert@dundermifflin.com">✏️ Jim Halpert </option>
+        <option value="k.malone@dundermifflin.com">🍪 Kevin Malone </option>
       </select>
-      <button type="submit" class="btn">{% trans "Get a Demo" %}</button>
+      <button type="submit" id="submitBtn" class="btn" disabled>{% trans "Get a Demo" %}</button>
     </form>
   </div>
 </div>
